--- a/Reasources/CSS/style.css
+++ b/Reasources/CSS/style.css
@@ -1,4 +1,4 @@
-.header{
+ .header{
   font-family: Verdana;
   font-weight: normal;
   font-size: 50px;
@@ -13,6 +13,28 @@ a{
   color: aquamarine;
   font-size: 16px;
 }
-video{
-  align-items: center;
+.travel{
+  font-family: Verdana;
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+
+.about{
+  font-family: verdana;
+  font-size: 21px;
+  color: gray;
+}
+.soon{
+  font-family: Verdana;
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+.copyright{
+  font-family: verdana;
+  font-size: 21px;
+  color: gray;
+  text-align: right;
+  font-weight: lighter;
 }
